@@ -70,6 +70,10 @@ Version 1.7.8
        position dont match. (Stefan)
 - BUG: Issue #355: newline symbols are
        shown incorrectly. (Stefan)
+- BUG: Issue #357: tagging externals from log
+       dialog not implemented. (Stefan)
+- BUG: Issue #359: out of memory exception
+       in commit dialog. (Stefan)
 
 Version 1.7.7
 - BUG: Issue #233: Crash when closing the
